--- a/gameserver/nginx.develop.conf
+++ b/gameserver/nginx.develop.conf
@@ -48,12 +48,18 @@ http {
             expires 365d;
             access_log off;
             etag on;
-            if_modified_since exact;
+            if_modified_since exact;  
             add_header Pragma "public";
             add_header Cache-Control "max-age=31536000, public";
         }
 
-
+        location /echo/ {
+        proxy_pass http://app:18080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        }
 
         location ~ \.php$ {
             try_files $uri =404;
