--- a/gameserver/composer.json
+++ b/gameserver/composer.json
@@ -7,17 +7,18 @@
     "require": {
         "php": "^8.0|^8.1",
         "ext-sqlite3": "*",
+        "cboden/ratchet": "^0.4",
+        "composer/composer": "^2.4",
         "flipbox/lumen-generator": "^9.1",
         "guzzlehttp/guzzle": "^7.2",
-        "illuminate/redis": "^9",
-        "spatie/laravel-collection-macros": "^7.0",
-        "illuminate/console": "^9",
-        "illuminate/events": "^9",
-        "composer/composer": "^2.2.12",
-        "illuminate/database": "^9.37",
         "illuminate/cache": "^9",
+        "illuminate/console": "^9",
+        "illuminate/database": "^9.37",
+        "illuminate/events": "^9",
+        "illuminate/redis": "^9",
         "laravel/lumen-framework": "^9.35",
         "predis/predis": "^1.1",
+        "spatie/laravel-collection-macros": "^7.0",
         "tymon/jwt-auth": "dev-develop"
     },
     "autoload": {
